--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header .logo{
 span{
     /* background: var(--gradient-color-bg); */
     background: var(--gradient-color-bg);
-    background-clip: text;   
+    -webkit-background-clip: text;   
     color: transparent;
 }
 
@@ -83,7 +83,7 @@ ul.navlist{
 }
 .navlist li a:hover , .navlist li a.active{
 background: var(--gradient-color-bg);
- background-clip: text;   
+ -webkit-background-clip: text;   
 color: transparent; 
 
 }
@@ -202,7 +202,7 @@ font-size: 3.5rem;
     /* background no repeat is important */
 
     background-repeat: no-repeat;
-    background-clip: text;
+    -webkit-background-clip: text;
     background-position: 0rem 0;
     transition: 0.6s;
     letter-spacing: 1px;
@@ -1248,10 +1248,16 @@ z-index: 12;
     font-size: 1rem;
 }
 .about .about-img .about-hero {
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 280px;
+    min-height: 280px;
 }
-
+.home , .portfolio-box{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.about{
+    flex-direction: column;
+}
 /* .img-hero img{
     width: 100%;
 } */
